# axum-backend

./: Cargo.toml  README.md  cargo-generate.toml
src/: lib.rs  main.rs
src/infrastracture/config/: mod.rs
src/presentation/routes/: mod.rs
